Enable CredentialManagerBrowserTest.ObsoleteHttpCredentialMovedOnMigrationToHstsSite

The CL does
- introduce a new observer for the password UI state,
- uses it for ObsoleteHttpCredentialMovedOnMigrationToHstsSite,
- fixes all other tests broken by PasswordManagerBrowserTestBase changes.

BUG=703305

Review-Url: https://codereview.chromium.org/2759353004
Cr-Commit-Position: refs/heads/master@{#458721}

Former-commit-id: 9a3e6e43c4bdce4bdb64cbeb3f5bcf61d35e2ff7